--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,4 +1,4 @@
-{
+{{
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -8,8 +8,14 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
+}
 }
