--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/css-modules": "^1.0.5",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0"
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitejs/plugin-react-swc": "^4.2.0"
   }
 }
