--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "description": "",
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "vite": "^7.1.12"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
-    "@vitejs/plugin-react-swc": "^4.2.0"
+    "@vitejs/plugin-react-swc": "^4.2.0",
+    "vite": "^7.1.12"
   }
 }
