--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "@vitejs/plugin-react": "^5.1.0",
     "@vitejs/plugin-react-swc": "^4.2.0",
     "vite": "^7.1.12"
-  }
+  },
+  "engines": {
+  "node": "20.x",
+  "npm": "10.x"
+}
 }
