--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "02-react-cafe",
   "version": "1.0.0",
   "main": "index.js",
+  
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "build": "npx vite build"
+}
+
+  ,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/StunMasteR/02-react-cafe.git"
