--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   
   "scripts": {
-  "build": "npx vite build"
+  "dev": "vite",
+  "build": "node node_modules/vite/bin/vite.js build",
+  "preview": "vite preview",
+  "postinstall": "chmod +x node_modules/.bin/* || true"
 }
 
   ,
